--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "chromedriver": "^83.0.0",
+    "puppeteer": "3.2.0",
+    "puppeteer-core": "^3.2.0",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "webdriverio": "^6.1.14"
   }
